--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
               <button>Read More</button>
             </div>
           </li>
-          <li class='item' style="background-image: url('https://i.ibb.co/YBCCBDC/IMG-5274.jpg')">
+          <li class='item' style="background-image: url('https://i.ibb.co/XXv97JR/IMG-5275.jpg')">
             <div class='content'>
               <h2 class='title'>"Your Eyes..."</h2>
               <p class='description'> "Are you a magician? Because whenever I look at you, everyone else disappears. ✨"</p>
               <button>Read More</button>
             </div>
           </li>
-          <li class='item' style="background-image: url('https://i.ibb.co/YBCCBDC/IMG-5274.jpg')">
+          <li class='item' style="background-image: url('https://i.ibb.co/z6Jh3PT/IMG-5276.jpg')">
             <div class='content'>
               <h2 class='title'>"You are Always in my mind"</h2>
               <p class='description'> "You're like a fine wine – you get better with time. 😍  </p>
               <button>Read More</button>
             </div>
           </li>
-          <li class='item' style="background-image: url('https://staticimg.amarujala.com/assets/images/2024/03/25/sharathathha-kapara_8665c2538b3f71dd2cd7e925648f9d6a.jpeg?w=414')">
+          <li class='item' style="background-image: url('https://i.ibb.co/txSGTm5/nikhil.jpg')">
             <div class='content'>
               <h2 class='title'>"When i Lost I find You.."</h2>
               <p class='description'>
@@ -39,7 +39,7 @@
               <button>Read More</button>
             </div>
           </li>
-          <li class='item' style="background-image: url('https://www.jagranimages.com/images/newimg/06102023/06_10_2023-shraddha_kapoor_dating_rumour_23548969.webp')">
+          <li class='item' style="background-image: url('https://i.ibb.co/6rmNm48/nik.jpg')">
             <div class='content'>
               <h2 class='title'>"You are cute .."</h2>
               <p class='description'>
