--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
    <body>
     <main>
         <ul class='slider'>
-          <li class='item' style="background-image: url('https://i.ibb.co/YBCCBDC/IMG-5274.jpg')">
+          <li class='item' style="background-image: url('https://i.ibb.co/XfhtDNW6/IMG-20250504-201720.png')">
             <div class='content'>
               <h2 class='title'>You are Magical</h2>
               <p class='description'> I was thinking about you today and couldn't help but smile. Your presence has a way of making everything better.  </p>
               <button>Read More</button>
             </div>
           </li>
-          <li class='item' style="background-image: url('https://i.ibb.co/XXv97JR/IMG-5275.jpg')">
+          <li class='item' style="background-image: url('https://i.ibb.co/kVrqzj7c/IMG-20250504-201737.png')">
             <div class='content'>
               <h2 class='title'>"Your Eyes..."</h2>
               <p class='description'> "Are you a magician? Because whenever I look at you, everyone else disappears. ✨"</p>
               <button>Read More</button>
             </div>
           </li>
-          <li class='item' style="background-image: url('https://i.ibb.co/z6Jh3PT/IMG-5276.jpg')">
+          <li class='item' style="background-image: url('https://i.ibb.co/JjvQJfxz/IMG-20250504-201801.png')">
             <div class='content'>
               <h2 class='title'>"You are Always in my mind"</h2>
               <p class='description'> "You're like a fine wine – you get better with time. 😍  </p>
               <button>Read More</button>
             </div>
           </li>
-          <li class='item' style="background-image: url('https://i.ibb.co/txSGTm5/nikhil.jpg')">
+          <li class='item' style="background-image: url('https://i.ibb.co/KpFgqxTQ/IMG-20250504-201814.png')">
             <div class='content'>
               <h2 class='title'>"When i Lost I find You.."</h2>
               <p class='description'>
@@ -39,7 +39,7 @@
               <button>Read More</button>
             </div>
           </li>
-          <li class='item' style="background-image: url('https://i.ibb.co/6rmNm48/nik.jpg')">
+          <li class='item' style="background-image: url('https://i.ibb.co/kVrqzj7c/IMG-20250504-201737.png')">
             <div class='content'>
               <h2 class='title'>"You are cute .."</h2>
               <p class='description'>
